Bug 814179 - Optimize BC ARM JSOP_URSH for a double type result. r=jandem